--- a/requirements.txt
+++ b/requirements.txt
@@ -8,23 +8,23 @@ chardet==3.0.4
 docutils==0.14
 idna==2.7
 imagesize==1.1.0
-Jinja2==2.10
-lxml==4.2.5
+jinja2>=2.11.3
+lxml>=4.6.3
 MarkupSafe==1.0
 more-itertools==4.3.0
-nltk==3.3
+nltk>=3.4.5
 numpy==1.15.2
 packaging==18.0
 pandas==0.23.4
 pluggy==0.8.0
-py==1.7.0
+py>=1.10.0
 Pygments>=2.7.4
 pymongo==3.7.2
 pyparsing==2.2.2
 pytest==3.9.1
 python-dateutil==2.7.3
 pytz==2018.5
-PyYAML==3.13
+PyYAML>=5.4
 requests==2.20.0
 scikit-learn==0.20.0
 scipy==1.1.0
@@ -32,4 +32,4 @@ six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.8.1
 sphinxcontrib-websupport==1.1.0
-urllib3==1.24
+urllib3>=1.24.2
